# pyppm

./: .gitignore  .readthedocs.yml  README.md  hoola_perro.txt  perro.txt  pyproject.toml  pytest.ini  requeriments.txt  requirements.txt  requirements_dev.txt  setup.py  tmpjkjszizk  tox.ini  tox_.ini_
4c_ssc/: 22-rkb_no_pair_ints.py  HI_dyall.txt  HI_pyscf.txt  HI_scf.txt  mejorando_m.py  memory_test.py  rkb_integrals.py  test.py  test_M.py  test_dhf_scf.py  test_dia_para.py  test_select.py  test_ssc_program.py
C2H2F4/: C2H2F2_100_ccpvdz_Cholesky_PM.molden  C2H2F2_120_ccpvdz_Cholesky_PM.molden  C2H2F2_140_ccpvdz_Cholesky_PM.molden  C2H2F2_150_ccpvdz_Cholesky_PM.molden  C2H2F2_170_ccpvdz_Cholesky_PM.molden  C2H2F2_200_ccpvdz_Cholesky_PM.molden  C2H2F2_270_ccpvdz_Cholesky_PM.molden  C2H6_180_ccpvdz_Cholesky_PM.molden  cloppa_fc_ij_C2H4F2.txt  graph_fc_ij.py  ssc_c2h2f4_karplus.py  tmpz95i0a3q
C2H2F4_Pipek_Becke/: C2H2F4_100_ccpvdz_Cholesky_PM.molden  C2H2F4_180_ccpvdz_Cholesky_PM.molden  C2H2F4_260_ccpvdz_Cholesky_PM.molden  C2H2F4_30_ccpvdz_Cholesky_PM.molden  C2H2F4_40_ccpvdz_Cholesky_PM.molden  C2H2F4_50_ccpvdz_Cholesky_PM.molden  C2H2F4_80_ccpvdz_Cholesky_PM.molden  M_iajb_C2H2F4.py  elementos_cloppa__C2H2F4_fc_iajb.txt  elements_cloppa_fc_iajb_C2H2F4.py  energy_ang_c2h2f4.py  energy_dihedral_angle_C2H2F4.txt  entanglement_triplet_c2f4h2.txt  entanglement_triplet_c2f6.txt  entropy_test.py  entropy_test_2.py  entropy_triplet.py  entropy_triplet.txt  entropy_triplet_iajb_c2h2f4.py  entropy_triplet_iajb_c2h2f4_1.0.py  entropy_triplet_iajb_c2h2f4_2.0.py  graficador.py  (+26 more)
(+916 files in other folders)
