[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyppm"
version = "1.0.0"
description = """
Calculates molecular response properties using Polarization Propagator approach
"""
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daniel F. E. Bajac", email = "danielbajac94@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pyscf >=2.4.0, <=2.8.0",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "pytest-cov",
    "tox",
    "mypy",
    "sphinx",
    "sphinx_rtd_theme",
    "pytest-mpl"
]

[tool.setuptools]
packages = ["pyppm"]

[tool.setuptools.dynamic]
version = { attr = "pyppm.__version__" }

[tool.pytest.ini_options]
addopts = "-v --cov=pyppm --cov-report=term-missing --cov-fail-under=40"
testpaths = ["tests"]